# pytia-bill-of-material

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  _build.py  _release.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: DEFAULT_FILES.md  INSTALLATION.md  SAMPLE_FILES.md  USAGE.md  WORKSPACE_FILE.md
docs/pytia_bill_of_material/: const.html  dependencies.html  exceptions.html  index.html  main.html
docs/pytia_bill_of_material/app/: index.html  main_ui.html
docs/pytia_bill_of_material/helper/: appearance.html  callbacks.html  commons.html  documents.html  files.html  folders.html  index.html  lazy_loaders.html  messages.html  names.html  resource.html
docs/pytia_bill_of_material/models/: bom.html  files.html  index.html  paths.html  report.html  runner.html
docs/pytia_bill_of_material/protocols/: index.html  task_protocol.html
docs/pytia_bill_of_material/resources/: index.html  utils.html
docs/pytia_bill_of_material/templates/: index.html
docs/pytia_bill_of_material/utils/: bom.html  excel.html  export.html  files.html  handler.html  index.html  language.html  product.html  system.html
docs/pytia_bill_of_material/worker/: catia_export.html  export_items.html  index.html  main_task.html  make_report.html  move_files.html  prepare.html  process_bom.html  runner.html  save_bom.html
pytia_bill_of_material/: __init__.py  const.py  dependencies.py  exceptions.py  gui.py  main.py
pytia_bill_of_material/app/: __init__.py  main_ui.py
pytia_bill_of_material/helper/: __init__.py  appearance.py  callbacks.py  commons.py  documents.py  files.py  folders.py  lazy_loaders.py  messages.py  names.py  resource.py
pytia_bill_of_material/models/: __init__.py  bom.py  files.py  paths.py  report.py  runner.py
pytia_bill_of_material/protocols/: task_protocol.py
pytia_bill_of_material/resources/: __init__.py  bom.default.json  dependencies.json  docket.sample.json  documentation.sample.json  filters.default.json  information.default.json  keywords.json  properties.default.json  settings.sample.json
pytia_bill_of_material/templates/: __init__.py  docket.sample.CATDrawing  documentation.sample.CATDrawing
pytia_bill_of_material/utils/: __init__.py  bom.py  excel.py  export.py  files.py  handler.py  language.py  product.py  system.py
pytia_bill_of_material/worker/: __init__.py  catia_export.py  export_items.py  main_task.py  make_report.py  move_files.py  prepare.py  process_bom.py  runner.py  save_bom.py
tests/: __init__.py  test_dependencies.py  test_pytia_bill_of_material.py  test_resources.py
vbs/: build.template.catvbs
(+18 files in other folders)
